--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -49,10 +49,10 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color -input=false -var="service_account_email=${{ secrets.WIF_SERVICE_ACCOUNT }}"
+      run: terraform plan -no-color -input=false -var="service_account_email=${{ secrets.WIF_SERVICE_ACCOUNT_GCS }}"
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false -var="service_account_email=${{ secrets.WIF_SERVICE_ACCOUNT }}"
+      run: terraform apply -auto-approve -input=false -var="service_account_email=${{ secrets.WIF_SERVICE_ACCOUNT_GCS }}"
 
     - name: Output State Bucket Name
       run: terraform output state_bucket_name
