--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -30,6 +30,12 @@ jobs:
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
 
+    - name: Verify Authentication
+      run: |
+        gcloud auth list
+        gcloud config list
+        echo "Service account from secret: ${{ secrets.WIF_SERVICE_ACCOUNT_GCS }}"
+
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
       with:
