Added debug step

--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -32,9 +32,14 @@ jobs:
 
     - name: Verify Authentication
       run: |
+        echo "Current gcloud auth:"
         gcloud auth list
+        echo "Current project config:"
         gcloud config list
-        echo "Service account from secret: ${{ secrets.WIF_SERVICE_ACCOUNT_GCS }}"
+        echo "Testing storage permissions..."
+        gcloud storage buckets list --project=juangar-sandbox --limit=1 || echo "Storage list failed"
+        echo "Testing bucket creation permissions..."
+        gcloud alpha storage buckets describe gs://juangar-sandbox-terraform-state --project=juangar-sandbox 2>/dev/null && echo "Bucket already exists" || echo "Bucket does not exist, creation should be allowed"
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
