--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -27,6 +27,7 @@ jobs:
         workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
         service_account: ${{ secrets.WIF_SERVICE_ACCOUNT_GCS }}
         project_id: juangar-sandbox
+        token_format: 'access_token'
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
