--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -52,10 +52,10 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color -input=false -var="service_account_email=${{ secrets.WIF_SERVICE_ACCOUNT_GCS }}"
+      run: terraform plan -no-color -input=false -var="service_account_email=gcs-sa@sandbox-juangar.iam.gserviceaccount.com"
 
     - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false -var="service_account_email=${{ secrets.WIF_SERVICE_ACCOUNT_GCS }}"
+      run: terraform apply -auto-approve -input=false -var="service_account_email=gcs-sa@sandbox-juangar.iam.gserviceaccount.com"
 
     - name: Output State Bucket Name
       run: terraform output state_bucket_name
