--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -25,8 +25,7 @@ jobs:
       uses: google-github-actions/auth@v3
       with:
         workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
-        service_account: gcs-sa@sandbox-juangar.iam.gserviceaccount.com
-        project_id: sandbox-juangar
+        service_account: ${{ secrets.WIF_SERVICE_ACCOUNT_GCS}}
         token_format: 'access_token'
 
     - name: Set up Cloud SDK
