--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,7 +28,7 @@ jobs:
       uses: google-github-actions/auth@v2
       with:
         workload_identity_provider: ${{ secrets.WIF_PROVIDER }}
-        service_account: ${{ secrets.WIF_SERVICE_ACCOUNT }}
+        service_account: ${{ secrets.WIF_SERVICE_ACCOUNT_GKE }}
 
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
@@ -43,8 +43,10 @@ jobs:
       run: terraform fmt -check
 
     - name: Terraform Init
-      id: init
-      run: terraform init
+      run: |
+        terraform init \
+          -backend-config="bucket=sandbox-juangar-terraform-state" \
+          -backend-config="prefix=terraform/state"
 
     - name: Terraform Validate
       id: validate
