--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -2,6 +2,15 @@ name: 'Bootstrap - Deploy State Bucket'
 
 on:
   workflow_dispatch:
+    inputs:
+      action:
+        description: 'Action to perform'
+        required: true
+        default: 'apply'
+        type: choice
+        options:
+          - apply
+          - destroy
 
 permissions:
   contents: read
@@ -9,7 +18,7 @@ permissions:
 
 jobs:
   bootstrap:
-    name: 'Bootstrap State Bucket'
+    name: 'Bootstrap State Bucket - ${{ inputs.action }}'
     runs-on: ubuntu-latest
 
     defaults:
@@ -51,10 +60,21 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color -input=false -var="service_account_email=gcs-sa@sandbox-juangar.iam.gserviceaccount.com"
+      run: |
+        if [ "${{ inputs.action }}" == "destroy" ]; then
+          terraform plan -destroy -no-color -input=false -var="service_account_email=gcs-sa@sandbox-juangar.iam.gserviceaccount.com"
+        else
+          terraform plan -no-color -input=false -var="service_account_email=gcs-sa@sandbox-juangar.iam.gserviceaccount.com"
+        fi
 
-    - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false -var="service_account_email=gcs-sa@sandbox-juangar.iam.gserviceaccount.com"
+    - name: Terraform Apply/Destroy
+      run: |
+        if [ "${{ inputs.action }}" == "destroy" ]; then
+          terraform destroy -auto-approve -input=false -var="service_account_email=gcs-sa@sandbox-juangar.iam.gserviceaccount.com"
+        else
+          terraform apply -auto-approve -input=false -var="service_account_email=gcs-sa@sandbox-juangar.iam.gserviceaccount.com"
+        fi
 
     - name: Output State Bucket Name
+      if: inputs.action == 'apply'
       run: terraform output state_bucket_name
