--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -83,8 +83,8 @@ jobs:
 
           github.rest.issues.createComment({
             issue_number: context.issue.number,
-            owner: context.owner,
-            repo: context.repo,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
             body: output
           })
 
